<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".home.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complete_profile"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:lottie_rawRes="@raw/wallet_lottie"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monthly_income"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/ed_monthlyIncome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/editview_background"
            android:drawablePadding="15dp"
            android:hint="@string/monthly_income"
            android:inputType="number"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="#99FFFFFF"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monthly_expense"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/ed_monthlyExpense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/editview_background"
            android:drawablePadding="15dp"
            android:hint="@string/monthly_expense"
            android:inputType="number"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="#99FFFFFF"
            android:textSize="14sp"
             />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_title"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/ed_jobTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/editview_background"
            android:drawablePadding="15dp"
            android:hint="@string/job_title"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="#99FFFFFF"
            android:textSize="14sp"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_location"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/ed_jobLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/editview_background"
            android:drawablePadding="15dp"
            android:hint="@string/job_location"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="#99FFFFFF"
            android:textSize="14sp"
            />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:background="@drawable/button_background"
            android:text="@string/submit"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>