<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Full Name"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/editview_background"
            android:drawablePadding="15dp"
            android:hint="Full Name"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="#99FFFFFF"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Phone Number"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/editview_background"
            android:drawablePadding="15dp"
            android:hint="Phone Number"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="#99FFFFFF"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/editview_background"
            android:drawablePadding="15dp"
            android:hint="Email"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="#99FFFFFF"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monthly_income"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tv_monthlyIncome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/editview_background"
            android:drawablePadding="15dp"
            android:hint="@string/monthly_income"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="#99FFFFFF"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monthly_expense"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tv_monthlyExpense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/editview_background"
            android:drawablePadding="15dp"
            android:hint="@string/monthly_expense"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="#99FFFFFF"
            android:textSize="14sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_title"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tv_jobTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/editview_background"
            android:drawablePadding="15dp"
            android:hint="@string/job_title"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="#99FFFFFF"
            android:textSize="14sp"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_location"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tv_jobLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/editview_background"
            android:drawablePadding="15dp"
            android:hint="@string/job_location"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="#99FFFFFF"
            android:textSize="14sp"
            />


    </LinearLayout>


</ScrollView>